# cloudFS

./: .clang-format  .dockerignore  .gitignore  Dockerfile  main.cpp  meson.build
.devcontainer/: devcontainer.json
include/: cloudfs.h  factory.h  meson.build
lib/: cloudfs.cpp  cloudfs.h  factory.cpp  factory.h  log_config.h  meson.build
lib/backend/: backend.h  backendfh.h  errors.h  types.h
lib/cache/: lru_cache.h  stats_cache.cpp  stats_cache.h
lib/cloudfs_types/: cloud_interface.cpp  cloud_interface.h  cloud_metadata_accessor.cpp  cloud_metadata_accessor.h  google_cloud_fs.cpp  google_cloud_fs.h
lib/cloudfs_types/fd/: fd_entity.cpp  fd_entity.h  fd_manager.cpp  fd_manager.h
lib/common/: result.h  retry.cpp  retry.h  str_utils.cpp  str_utils.h  sys_utils.cpp  sys_utils.h  types.h
lib/dep-config/: meson.build
lib/internal/: cloudfs_exception.cpp  cloudfs_exception.h  cloudfs_internal.cpp  cloudfs_internal.h
lib/security/: permission_checker.cpp  permission_checker.h
lib/src-config/: meson.build
scripts/: globber.sh
subprojects/: aws-s3-cpp.wrap  gcs-cpp.wrap  libfuse.wrap  osxfuse.wrap  spdlog.wrap  winfuse.wrap  yaml-cpp.wrap
test/: meson.build
test/test_lib/: cloudfs_test.cpp
test/test_lib/cloudfs_types/fd/: fd_manager_test.cpp
