main_src = [
    'cloudfs.cpp',
    'factory.cpp',
]

common_src = [
    'common/str_utils.cpp',
    'common/sys_utils.cpp',
    'common/retry.cpp'
]

cloudfs_types_src = [
  'cloudfs_types/google_cloud_fs.cpp',
  'cloudfs_types/cloud_interface.cpp',
  'cloudfs_types/cloud_metadata_accessor.cpp',
  'cloudfs_types/fd/fd_manager.cpp',
  'cloudfs_types/fd/fd_entity.cpp',
]

internal_src = [
  'internal/cloudfs_internal.cpp',
  'internal/cloudfs_exception.cpp',
]

cache_src = [
  'cache/stats_cache.cpp',
]

# backend_src = [

# ]
libSrc = main_src + common_src + cloudfs_types_src + internal_src + cache_src